# WebDevelopmentProj

./: .breakpoints  .replit  README.md  app.py  database.db  pyproject.toml  requirements.txt
templates/: Accountdetails.html  Login.html  Register.html  bookingconfirmation.html  enlistproperty.html  findparking.html  forgotpass.html  home.html  home1.html  resetpassword.html
